Update to logos 2

--- a/src/pages/posts/logos.mdx
+++ b/src/pages/posts/logos.mdx
@@ -1,13 +1,13 @@
 ---
 layout: ../../layouts/PostLayout.astro
 
-title: "Logos (WIP)"
+title: "Logos"
 description: "Some logos I created when it was my hobby."
 image:
-  path: null
-  alt: null
+  path: "/src/assets/card/logos.png"
+  alt: "3 creations, all with TB as content"
 category: "achievement"
-status: "completed"
+status: null
 from: null
 to: null
 duration: null
@@ -15,9 +15,7 @@ link: null
 tools: null
 ---
 
-import { Image } from "astro::assets";
-
-(Work in progress)
+import { Image } from "astro:assets";
 
 One of the first thing I did with a computer is drawing. When I learned about advanced tools, I started making logos for my own use for fun. I do not consider myself an artist, quite the contrary, but I like my ideas and what I have done with them. What follows are my attempts to do logos for different reasons, from personal personal projects and experiments to concretize ideas of others.
 
