Update some stuff

--- a/src/pages/posts/langslater.mdx
+++ b/src/pages/posts/langslater.mdx
@@ -7,7 +7,7 @@ image:
   path: "/src/assets/card/langslater.png"
   alt: "Icon with a latin character and a chinese character in chat bubbles"
 category: "achievement"
-status: "maintenance"
+status: "hold"
 from: 2022-09-21
 to: 2023-07-23
 duration: "1 years"
