--- a/src/pages/posts/logos.mdx
+++ b/src/pages/posts/logos.mdx
@@ -76,9 +76,7 @@ import logo_bw69 from "../../assets/logos/Logo_BuzzWall69.svg";
     src={logo_bw69}
     alt="Letters B W with a wall aspect in dark gray, and number 69 in blue and red, there is a white star in the background"
   />
-  <figcaption>
-    Logo for the BuzzWall69 project, designed on paper by friends
-  </figcaption>
+  <figcaption>Logo for the BuzzWall69 project, designed on paper by friends</figcaption>
 </figure>
 
 Finally, I always liked low poly creations, so I tried to do mine with my face. The result is definitely not amazing but it inspired me to do another one in the future.
