--- a/src/pages/posts/q-learning.mdx
+++ b/src/pages/posts/q-learning.mdx
@@ -24,9 +24,9 @@ import ia_learning from "../../assets/q_learning/ia_learning.gif";
 <figure>
   <picture>
     <source srcset={ia_learning.src} />
-    <Image src={ia_learning} alt="IA learning" />
+    <Image src={ia_learning} alt="AI learning" />
   </picture>
-  <figcaption>The IA at its first stages of learning.</figcaption>
+  <figcaption>The AI at its first stages of learning.</figcaption>
 </figure>
 
 Our game is a maze with multiple paths, devided in two parts, to get to the exit, but there is a passage at the center which is mandatory to get to the second part of the game. There are also ennemies located in mutiples dead ends and crossing their line of sight is a game over.
@@ -34,17 +34,17 @@ Our game is a maze with multiple paths, devided in two parts, to get to the exit
 import ia_not_optimal_path from "../../assets/q_learning/ia_not_optimal_path.gif";
 
 <figure>
-  <Image src={ia_not_optimal_path} alt="IA not optimal" />
-  <figcaption>The IA finds the exit but not via the optimal way.</figcaption>
+  <Image src={ia_not_optimal_path} alt="AI not optimal" />
+  <figcaption>The AI finds the exit but not via the optimal way.</figcaption>
 </figure>
 
-One of the challenge is to find the correct balance of settings for it to learn efficiently. An other challenge is to chose the right perceptions of the IA. In our case, we decided it could see 4 cases around it <code>(UP, RIGHT, DOWN, LEFT)</code> and that he could not go back except in case of a dead end.
+One of the challenge is to find the correct balance of settings for it to learn efficiently. An other challenge is to chose the right perceptions of the AI. In our case, we decided it could see 4 cases around it <code>(UP, RIGHT, DOWN, LEFT)</code> and that he could not go back except in case of a dead end.
 
 import ia_best_path from "../../assets/q_learning/ia_best_path.gif";
 
 <figure>
-  <Image src={ia_best_path} alt="IA best path" />
-  <figcaption>The IA after it learned during enough time.</figcaption>
+  <Image src={ia_best_path} alt="AI best path" />
+  <figcaption>The AI after it learned during enough time.</figcaption>
 </figure>
 
 We also added a gamemode where the player could solve the maze by himself and we integrated the whole through a menu.
