Update to the self-host post

--- a/src/pages/posts/raspberry-pi.mdx
+++ b/src/pages/posts/raspberry-pi.mdx
@@ -21,7 +21,7 @@ This page lists all the projects I have made using a Raspberry Pi, or later a VP
 
 ## Hosting my website
 
-In the past, I tried hosting my website on the Raspberry Pi thanks to **Apache HTTP Server**, and since I have my own domain name, I learned to configure **DDNS** with IPv4 and other settings such as redirections or subdomains. I installed an **SSL certificate** from Let's Encrypt to understand how it works. However, I believe I had some problems with DNS propagation because some user were not able to access it, therefore I am no longer hosting it myself.
+In the past, I tried hosting my website on the Raspberry Pi thanks to **Apache HTTP Server**, and since I have my own domain name, I learned to configure **DDNS** with IPv4 and other settings such as redirections or subdomains. I installed an **SSL certificate** from Let's Encrypt to understand how it works. However, I believe I had some problems with DNS propagation because some users were not able to access it, therefore I am no longer hosting it myself.
 
 ## Host a VPN and an ad-and-tracker-blocking application
 
@@ -30,6 +30,10 @@ I wanted to be able to access the french content of services even when I was abr
 ## Host my Discord bots
 
 It is easy to run Python on GNU/Linux, so here it belongs. I just had to make sure I installed every libraries needed, but with virtual environments it is very easy to make sure they are all correctly installed and not interfering between projects.
+
+## Host Joplin server
+
+When I thought about switching away from OneNote, every app I found had at least one paid feature, but when hosting the Joplin server, I was able to use everything for free, which was great. Not much I have to mention about that.
 
 ## Host a Minecraft server
 
@@ -41,3 +45,7 @@ import Minecraft_render from "../../assets/raspberry_pi/Minecraft_render.png";
   <Image src={Minecraft_render} alt="Minecraft render of our former school" />
   <figcaption>Minecraft render of our former school with Overviewer in construction.</figcaption>
 </figure>
+
+## In the future
+
+TODO
