--- a/src/pages/posts/my-website-v5.mdx
+++ b/src/pages/posts/my-website-v5.mdx
@@ -19,9 +19,9 @@ import { Image } from "astro:assets";
 
 In this fifth version, I decided to finally try a web framework to simplify some development.
 
-However, I had specifications in mind. First I wanted a MPA with SSR for performance reasons, allowing as few JavaScript as possible for the end user, removing frameworks such as React and Solid from my list. Yet, if needed, I wanted to still be able to add dynamic zones on the website and profit from the tools from the JS ecosystem, so I ended up using **Astro**. Then, I wanted to try **Tailwind**, which is very interesting to use, but I don't feel like it's that useful now that I've tested it, especially since CSS has improved a lot. My wish to use this framework eliminated Bootstrap from the other possibilities. I also needed **MDX** to write my posts. Finally, I've been using a component library called **daisyUI**, but I don't think I used it quite correctly. I also thought of using Kobalte for a while.
+However, I had specifications in mind. First I wanted a MPA/SSG for performance reasons, serving as little JavaScript as possible to the end user, removing frameworks such as React and Solid from my list. Yet, if needed, I wanted to still be able to add interactive zones on the website and profit from the tools from the JS ecosystem, so I ended up using **Astro**. Then, I wanted to try **Tailwind**, which is very interesting to use, but I don't feel like it's that useful now that I've tested it, especially since CSS has improved a lot. My wish to use this framework eliminated Bootstrap from the other possibilities. I also needed **MDX** to write my posts. Finally, I've been using a component library called **daisyUI**, but I don't think I used it quite correctly. I also thought of using Kobalte for a while.
 
-Another great advantage of Astro is that it's optimized for everything measured by PageSpeed Insights: performance, accessiblity, best practices, SEO.
+Another great advantage of Astro is that it's optimized for everything measured by PageSpeed Insights: performance, accessiblity, best practices, SEO, and has amazing transitions.
 
 import Screen_TristanB_v5_white from "../../assets/my_website_v5/Screen_TristanB_v5_white.png";
 
